kubernetes/base/cockroachdb/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: cockroach-operator
  name: cockroachdb
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: cockroach-operator
  name: cockroach-operator-webhook-service
  namespace: cockroachdb
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app: cockroach-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cockroach-operator
  name: cockroach-operator-manager
  namespace: cockroachdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cockroach-operator
  template:
    metadata:
      labels:
        app: cockroach-operator
    spec:
      containers:
        - args:
            - -zap-log-level
            - info
          image: cockroachdb/cockroach-operator:v2.12.0
          imagePullPolicy: IfNotPresent
          name: cockroach-operator
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
      serviceAccountName: cockroach-operator-sa
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: cockroach-operator-mutating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cockroach-operator-webhook-service
        namespace: cockroachdb
        path: /mutate-crdb-cockroachlabs-com-v1alpha1-crdbcluster
    failurePolicy: Fail
    name: mcrdbcluster.kb.io
    rules:
      - apiGroups:
          - crdb.cockroachlabs.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - crdbclusters
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: cockroach-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: cockroach-operator-webhook-service
        namespace: cockroachdb
        path: /validate-crdb-cockroachlabs-com-v1alpha1-crdbcluster
    failurePolicy: Fail
    name: vcrdbcluster.kb.io
    rules:
      - apiGroups:
          - crdb.cockroachlabs.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - crdbclusters
    sideEffects: None
